layout fix for footer

--- a/index.html
+++ b/index.html
@@ -664,6 +664,12 @@
             .footer_wrapper {
                 width: 100%;
             }
+            .footer_content_left > .header_wrapper {
+                width: 80%;
+            }
+            .footer_content_left > .header_wrapper > .section-heading {
+                text-align: left;
+            }
             .footer_content_right--mobile {
                 display: flex;
                 flex-direction: column;
@@ -674,6 +680,9 @@
             }
             .footer_content_right {
                 display: none;
+            }
+            .footer_content_right--mobile > .detail_item > .main_contacts > div  {
+                margin-right: 1rem;
             }
         }
         @media (max-width: 590px) {
