--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             }
         }
         .main_wrapper {
-            background: url("./assets/images/loft-style-house.png") no-repeat;
+            background: url("./assets/images/1.jpg") no-repeat;
             background-size: cover; /* Масштабируем фон */
             display: flex;
             flex-direction: column;
@@ -325,7 +325,7 @@
             }
         }
         .section_skill {
-            background: url("./assets/images/2nd.png") no-repeat;
+            background: url("./assets/images/2.jpg") no-repeat;
             background-size: cover; /* Масштабируем фон */
             display: flex;
             flex-direction: column;
@@ -392,7 +392,7 @@
             flex-direction: column;
         }
         .section_service {
-            background: url("./assets/images/3.png") no-repeat;
+            background: url("./assets/images/3.jpg") no-repeat;
             background-size: cover; /* Масштабируем фон */
             display: flex;
             flex-direction: column;
@@ -463,7 +463,7 @@
             }
         }
         .section_portfolio {
-            background: url("./assets/images/4.png") no-repeat;
+            background: url("./assets/images/4.jpg") no-repeat;
             background-size: cover; /* Масштабируем фон */
             display: flex;
             flex-direction: column;
@@ -552,7 +552,7 @@
             }
         }
         .section_reviews {
-            background: url("./assets/images/5.png") no-repeat;
+            background: url("./assets/images/5.jpg") no-repeat;
             background-size: cover; /* Масштабируем фон */
             display: flex;
             flex-direction: column;
@@ -621,7 +621,7 @@
             text-align: right;
         }
         .footer {
-            background: url("./assets/images/footer.png") no-repeat;
+            background: url("./assets/images/6.jpg") no-repeat;
             background-size: cover; /* Масштабируем фон */
             display: flex;
             flex-direction: column;
