fixed width for main heading

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             justify-content: space-between;
             align-items: center;
             width: 100%;
+            padding: 10px 0;
             /*margin: 0 10%;*/
         }
         .header_content_left {
@@ -74,6 +75,7 @@
         }
         .menu_list li a {
             color: black;
+            font-family: 'Montserrat', sans-serif;
         }
         .logo {
             font-family: 'Montserrat', sans-serif;
@@ -171,7 +173,8 @@
         }
 
         .header_wrapper {
-            width: 60%;
+            /*width: 60%;*/
+            max-width: 750px;
             margin-bottom: 40px;
         }
         .section-heading {
@@ -356,6 +359,7 @@
             flex-direction: column;
             width: 100%;
             min-height: 768px;
+            padding-bottom: 0;
         }
         .skill_wrapper > .header_wrapper {
             margin: 7rem 20% 40px;
