font family was changed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         }
         h1,h2,h3,h4 {
             text-transform: uppercase;
+            letter-spacing: 1px;
         }
         h4 {
             font-weight: bold;
@@ -189,6 +190,7 @@
         }
 
         .section-subheading {
+            font-family: 'Montserrat', sans-serif;
             font-size: 36px;
             font-weight: 900;
         }
@@ -203,6 +205,7 @@
         }
         .actions_wrapper > .chain {
             margin-top: 1rem;
+            font-family: 'Montserrat', sans-serif;
         }
         .order {
             width: 263px;
@@ -282,6 +285,9 @@
             }
             .phone_number_wrapper {
                 margin-top: 1rem;
+            }
+            .phone_number_wrapper > .phone_action_wrapper {
+                margin-top: 10px;
             }
             .media {
                 justify-content: center;
@@ -470,9 +476,13 @@
         .service-item > .detail_item {
             font-size: 16px;
         }
+        .service-item > .detail_item > p {
+            font-family: 'Montserrat', sans-serif;
+        }
         .service-item > .chain {
             margin-bottom: 0.5rem;
             font-weight: 900;
+            text-transform: none;
         }
         .service-item--left {
             width: 50%;
@@ -520,6 +530,7 @@
             /*justify-content: center;*/
             width: 100%;
             min-height: 768px;
+            padding-bottom: 0;
         }
         .portfolio_wrapper > div {
             margin: 2rem 20%;
@@ -680,7 +691,11 @@
             flex-direction: column;
             justify-content: space-between;
         }
+        .review_text_wrapper > p {
+            font-family: 'Montserrat', sans-serif;
+        }
         .review_text_wrapper > p > span {
+            font-family: 'Montserrat', sans-serif;
             font-weight: 700;
         }
         .review_text_author {
