--- a/index.html
+++ b/index.html
@@ -610,6 +610,9 @@
                 /*padding: 0 2rem;*/
                 width: auto;
             }
+            .detail_img_item > .detail {
+                font-family: 'Montserrat', sans-serif;
+            }
             .portfolio_media {
                 flex-direction: column;
                 justify-content: center;
