--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
                       </div>
                       <div class="icon_holder whatsapp">
                           <!--WhatsApp-->
-                          <a class="media_link" href="https://www.facebook.com/LanData.ee/" target="_blank">
+                          <a class="media_link" href="https://wa.me/+3725518889" target="_blank">
                               <div class="base64" id="whatsapp"></div>
                           </a>
                       </div>
@@ -1167,7 +1167,7 @@
                           <div class="main_contacts">
                               <div class="icon_holder scaled_whatsapp">
                                   <!--WhatsApp-->
-                                  <a class="media_link" href="https://www.facebook.com/LanData.ee/" target="_blank">
+                                  <a class="media_link" href="https://wa.me/+3725518889" target="_blank">
                                       <div class="base64 whatsapp_scale"></div>
                                   </a>
                               </div>
@@ -1450,7 +1450,7 @@
                                   <div class="main_contacts">
                                       <div class="icon_holder scaled_whatsapp">
                                           <!--WhatsApp-->
-                                          <a class="media_link" href="https://www.instagram.com/landata.ee/?igshid=g3qun83frqkl" target="_blank">
+                                          <a class="media_link" href="https://wa.me/+3725518889" target="_blank">
                                               <div class="base64 whatsapp_scale"></div>
                                           </a>
                                       </div>
@@ -1498,7 +1498,7 @@
                       <div class="main_contacts">
                           <div class="icon_holder scaled_whatsapp">
                               <!--WhatsApp-->
-                              <a class="media_link" href="https://www.instagram.com/landata.ee/?igshid=g3qun83frqkl" target="_blank">
+                              <a class="media_link" href="https://wa.me/+3725518889" target="_blank">
                                   <div class="base64 whatsapp_scale"></div>
                               </a>
                           </div>
