--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
                       </div>
                       <div class="icon_holder">
                           <!--Telegram-->
-                          <a class="media_link" href="https://www.facebook.com/LanData.ee/" target="_blank">
+                          <a class="media_link" href="https://t.me/alicize" target="_blank">
                               <div class="base64" id="telegram"></div>
                           </a>
                       </div>
@@ -1173,7 +1173,7 @@
                               </div>
                               <div class="icon_holder scaled">
                                   <!--Telegram-->
-                                  <a class="media_link" href="https://www.facebook.com/LanData.ee/" target="_blank">
+                                  <a class="media_link" href="https://t.me/alicize" target="_blank">
                                       <div class="base64 telegram_scale"></div>
                                   </a>
                               </div>
@@ -1456,7 +1456,7 @@
                                       </div>
                                       <div class="icon_holder scaled">
                                           <!--Telegram-->
-                                          <a class="media_link" href="https://www.instagram.com/landata.ee/?igshid=g3qun83frqkl" target="_blank">
+                                          <a class="media_link" href="https://t.me/alicize" target="_blank">
                                               <div class="base64 telegram_scale"></div>
                                           </a>
                                       </div>
@@ -1504,7 +1504,7 @@
                           </div>
                           <div class="icon_holder scaled">
                               <!--Telegram-->
-                              <a class="media_link" href="https://www.instagram.com/landata.ee/?igshid=g3qun83frqkl" target="_blank">
+                              <a class="media_link" href="https://t.me/alicize" target="_blank">
                                   <div class="base64 telegram_scale"></div>
                               </a>
                           </div>
